--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(Tg)
 export(aovSS)
 export(extract_sum)
 export(multivariate)
-export(pMatrix)
+export(pMat)
 export(univariate)
 importFrom(DescTools,PostHocTest)
 importFrom(MASS,lda)
