--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: TestDimorph
 Type: Package
 Title: Analysis Of The Interpopulation Difference In Degree of Sexual Dimorphism Using Summary Statistics
-Version: 0.3.0
+Version: 0.3.1
 Authors@R: 
     c(person(given = "Bassam",
              family = "A. Abulnoor",
@@ -20,7 +20,7 @@ Authors@R:
              comment = c(ORCID = "0000-0003-4052-1575")))
 Maintainer: Bassam A. Abulnoor  <bas12@fayoum.edu.eg>
 Description: Provides two approaches of comparison; the univariate and the multivariate analysis in two or more populations. Since the main obstacle of performing systematic comparisons in anthropological studies is the absence of raw data, the current package offer a solution for this problem by allowing the use of published summary statistics of metric data (mean, standard deviation and sex specific sample size) as illustrated by the works of  Greene, D. L. (1989) <doi:10.1002/ajpa.1330790113> and Konigsberg, L. W. (1991) <doi:10.1002/ajpa.1330840110>.
-Imports: Rfast,plyr,stats,utils,reshape2,purrr,dplyr,caret,rlang,MASS,klaR,mda,corrplot,truncnorm,stringr,ggplot2,plotROC,DescTools,tibble,tidyr,multcompView,tmvtnorm,randomForest
+Imports: Rfast,plyr,stats,utils,reshape2,purrr,dplyr,caret,rlang,MASS,klaR,corrplot,truncnorm,stringr,ggplot2,plotROC,DescTools,tibble,tidyr,multcompView,tmvtnorm,randomForest
 Suggests: 
     testthat (>= 2.1.0),
     AnthropMMD,
@@ -30,7 +30,7 @@ RdMacros: Rdpack
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Language: en-US
 Roxygen: list(markdown = TRUE)
 URL: https://github.com/bassam-abulnoor/TestDimorph
