--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,60 +3,50 @@
 export(AccuModel)
 export(RawGen)
 export(Tg)
+export(accu_model)
 export(aovSS)
+export(aov_ss)
 export(extract_sum)
 export(multivariate)
-export(pMat)
+export(pMatrix)
+export(raw_gen)
+export(t_greene)
 export(univariate)
-importFrom(DescTools,PostHocTest)
-importFrom(MASS,lda)
-importFrom(MASS,qda)
+import(dplyr)
+import(ggplot2)
 importFrom(Rfast,pooled.cov)
 importFrom(caret,confusionMatrix)
+importFrom(caret,train)
+importFrom(caret,trainControl)
 importFrom(corrplot,corrplot)
-importFrom(dplyr,"%>%")
-importFrom(dplyr,filter)
-importFrom(dplyr,full_join)
-importFrom(dplyr,group_by)
-importFrom(dplyr,select)
-importFrom(dplyr,summarise_all)
-importFrom(dplyr,ungroup)
-importFrom(ggplot2,aes)
-importFrom(ggplot2,element_blank)
-importFrom(ggplot2,facet_wrap)
-importFrom(ggplot2,geom_abline)
-importFrom(ggplot2,ggplot)
-importFrom(ggplot2,theme)
-importFrom(ggplot2,xlab)
-importFrom(ggplot2,ylab)
-importFrom(klaR,rda)
+importFrom(cutpointr,cutpointr)
+importFrom(cutpointr,plot_roc)
+importFrom(dplyr,case_when)
+importFrom(dplyr,contains)
 importFrom(multcompView,multcompLetters)
 importFrom(multcompView,vec2mat)
-importFrom(plotROC,geom_roc)
-importFrom(plyr,adply)
-importFrom(purrr,map)
-importFrom(purrr,map_dfr)
-importFrom(randomForest,randomForest)
-importFrom(reshape2,melt)
-importFrom(rlang,abort)
+importFrom(stats,TukeyHSD)
 importFrom(stats,aov)
-importFrom(stats,binomial)
-importFrom(stats,glm)
+importFrom(stats,dnorm)
+importFrom(stats,integrate)
+importFrom(stats,na.omit)
 importFrom(stats,p.adjust.methods)
+importFrom(stats,pchisq)
 importFrom(stats,pf)
 importFrom(stats,predict)
 importFrom(stats,pt)
+importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,relevel)
 importFrom(stats,rlnorm)
 importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,setNames)
-importFrom(stringr,str_split)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_longer)
 importFrom(tmvtnorm,rtmvnorm)
 importFrom(truncnorm,rtruncnorm)
 importFrom(utils,combn)
