--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Type: Package
 Package: TestDimorph
 Title: Analysis Of The Interpopulation Difference In Degree of Sexual
         Dimorphism Using Summary Statistics
-Version: 0.3.9
+Version: 0.4.0
 Authors@R: 
     c(person(given = "Bassam",
              family = "A. Abulnoor",
@@ -20,7 +20,7 @@ Authors@R:
              email = "lylek@illinois.edu",
              comment = c(ORCID = "0000-0003-4052-1575")))
 Maintainer: Bassam A. Abulnoor  <bassam.abulnoor@gmail.com>
-Description: Provides two approaches of comparison; the univariate and the multivariate analysis in two or more populations. Since the main obstacle of performing systematic comparisons in anthropological studies is the absence of raw data, the current package offer a solution for this problem by allowing the use of published summary statistics of metric data (mean, standard deviation and sex specific sample size) as illustrated by the works of  Greene, D. L. (1989) <doi:10.1002/ajpa.1330790113> and Konigsberg, L. W. (1991) <doi:10.1002/ajpa.1330840110>.
+Description: Offers a solution for the unavailability of raw data in most anthropological studies by facilitating the calculations of several sexual dimorphism related analyses using the published summary statistics of metric data (mean, standard deviation and sex specific sample size).
 License: GPL-3
 URL: https://github.com/bassam-abulnoor/TestDimorph
 BugReports: https://github.com/bassam-abulnoor/TestDimorph/issues
@@ -36,6 +36,7 @@ Imports:
   cutpointr,
   dplyr,
   ggplot2,
+  Morpho,
   multcompView,
   stats,
   tibble,
