--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,6 @@ export(multivariate)
 export(pMatrix)
 export(raw_gen)
 export(t_greene)
-export(to_symm_diag)
 export(univariate)
 export(van_vark)
 import(dplyr)
@@ -24,7 +23,9 @@ importFrom(caret,train)
 importFrom(caret,trainControl)
 importFrom(corrplot,corrplot)
 importFrom(cutpointr,cutpointr)
+importFrom(cutpointr,maximize_metric)
 importFrom(cutpointr,plot_roc)
+importFrom(cutpointr,sum_sens_spec)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
 importFrom(multcompView,multcompLetters)
