--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(univariate)
 export(van_vark)
 import(dplyr)
 import(ggplot2)
+importFrom(Morpho,covW)
 importFrom(caret,confusionMatrix)
 importFrom(caret,train)
 importFrom(caret,trainControl)
