--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Authors@R:
              email = "lylek@illinois.edu",
              comment = c(ORCID = "0000-0003-4052-1575")))
 Maintainer: Bassam A. Abulnoor  <bassam.abulnoor@gmail.com>
-Description: Offers a solution for the unavailability of raw data in most anthropological studies by facilitating the calculations of several sexual dimorphism related analyses using the published summary statistics of metric data (mean, standard deviation and sex specific sample size) as illustrated by the works of  Greene, D. L. (1989) <doi:10.1002/ajpa.1330790113> and Konigsberg, L. W. (1991) <doi:10.1002/ajpa.1330840110>..
+Description: Offers a solution for the unavailability of raw data in most anthropological studies by facilitating the calculations of several sexual dimorphism related analyses using the published summary statistics of metric data (mean, standard deviation and sex specific sample size) as illustrated by the works of  Greene, D. L. (1989) <doi:10.1002/ajpa.1330790113> and Konigsberg, L. W. (1991) <doi:10.1002/ajpa.1330840110>.
 License: GPL-3
 URL: https://github.com/bassam-abulnoor/TestDimorph
 BugReports: https://github.com/bassam-abulnoor/TestDimorph/issues
@@ -32,10 +32,3 @@ LazyData: true
 RoxygenNote: 7.1.1
 Imports: caret, corrplot, cutpointr, dplyr, ggplot2, Morpho,
         multcompView, stats, tidyr, tmvtnorm, truncnorm, utils
-NeedsCompilation: no
-Packaged: 2021-01-06 14:49:04 UTC; Bassam
-Author: Bassam A. Abulnoor [aut, cre] (<https://orcid.org/0000-0003-4351-2754>),
-  MennattAllah H. Attia [aut] (<https://orcid.org/0000-0002-2304-532X>),
-  Lyle W. Konigsberg [aut] (<https://orcid.org/0000-0003-4052-1575>)
-Repository: CRAN
-Date/Publication: 2021-01-10 15:10:08 UTC
